# studentdropout

./: .gitignore  GIT commit commands.docx  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  install_update_requirements.bat  pyproject.toml  requirements.txt
airflow/: entrypoint.sh  requirements.txt
docs/: 200320206_test_sdo78_data_performance.md  20260114_model selection logbook.md  20260320_sdo78_data_performance.md  20260325_sdo78_data_performance full model.md  20260409_sdo78_final_pipeline_validation.md  combining_dropout_v1v2_data.docx  dropout_version1_data_cleaning.docx  dropout_version2_data_cleaning.docx  mkdocs.yml  model selection logs.md
dropout/: pyvenv.cfg
notebooks/: 01 combining_data.ipynb  02 cleaning_data.ipynb  03 low_frequency_categories.ipynb  04 missing_values_imputation.ipynb  05 feature_derivation.ipynb  06 data standardization.ipynb  07 encode and split data.ipynb  07 feature_encoding.ipynb  08 exploratory_data_analysis.ipynb  09 statistics.ipynb  10 feature selection.ipynb  11 prediction_model_comparison.ipynb  11-1 prediction_lr.ipynb  11-2 prediction_dt.ipynb  11-3 prediction_rf.ipynb  11-4 prediction_nn.ipynb  11.1 predictions without sdo78.ipynb  11.2 predictions with sdo78.ipynb  12 hyperparameter tuning.ipynb  12 hyperparameter_tuning.ipynb  12.1 hyperparameter without sdo78.ipynb  12.2 hyperparameter with sdo78.ipynb  12.3 hyperparameter with sdo78 new search space.ipynb  13 results.ipynb  1_cleaning.ipynb  3 low_frequency_categories.ipynb  4 missing_values_imputation.ipynb  6 feature_normalization.ipynb  EDA.ipynb  (+22 more)
(+57 files in other folders)
